--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "engines": {
-    "node" : "12.13.1"
+    "node": "12.13.1"
   },
   "name": "heroku-app",
   "version": "1.0.0",
@@ -24,6 +24,7 @@
     "ejs": "^3.1.3",
     "express": "^4.17.1",
     "method-override": "^3.0.0",
-    "mongoose": "^5.9.17"
+    "mongoose": "^5.9.17",
+    "session": "^0.1.0"
   }
 }
